--- a/_analysis/EcoConsPreReg-supervisor_draft-Sep-2020.Rmd
+++ b/_analysis/EcoConsPreReg-supervisor_draft-Sep-2020.Rmd
@@ -15,7 +15,7 @@ author:
     affiliation: School of BioSciences, University of Melbourne
 abstract: "Blah blah"
 date: "`r Sys.Date()`"
-bibliography: ./data/references.bib
+bibliography: ../data/references.bib
 output: #
   distill::distill_article:
   self_contained: false
